@@ -36,6 +36,18 @@ fai (3.2.21) unstable; urgency=low
   * setup-storage/Fstab.pm: Be more verbose if obtaining the UUID fails (may
     be caused by earlier use in RAID array, tell the user how to solve the
     problem). Ignore exit code 3 of vol_id -l.
+  * setup-storage/Parser.pm: RAID device parsing: $2 doesn't refer to the
+    original expression anymore, store earlier $2 as $opts; don't use options
+    sub-hash (thanks Andreas Schockenhoff for lots of testing and feedback).
+  * setup-storage/Sizes.pm: Properly deal with missing (as in RAID specs) or
+    non-existing (user error) devices in estimate_size; don't do stupid divide
+    by 2 in RAID1 setup. (closes: #525138)
+  * setup-storage/Commands.pm: Proper use of hash reference when checking for
+    "missing" option.
+  * setup-storage/Parser.pm: Ensure that RAID volumes marked preserve don't
+    count as extra RAID volumes being defined.
+  * setup-storage/Parser.pm, setup-storage/Sizes.pm: Added support for raid10
+    (thanks William Francis for suggesting this).
   
  -- Thomas Lange <lange@debian.org>  Sun, 19 Jul 2009 12:08:02 +0200
 
